feat: clue archiving & deletion
archive current clue
delete clues from history
